# django-training

./: Makefile  db.sqlite3  pyproject.toml
beginners/blog app/: README.md  pyproject.toml
beginners/blog app/blog/: models.py  tests.py  urls.py  views.py
beginners/blog app/blog/templates/: home.html  post_detail.html  post_new.html
beginners/blog app/blog/templates/registration/: login.html
beginners/blog app/blog_project/: settings.py  urls.py
beginners/newspaper/: README.md  db.sqlite3  pyproject.toml
beginners/newspaper/articles/: models.py  urls.py  views.py
beginners/newspaper/articles/migrations/: 0001_initial.py  0002_comment.py  0003_alter_comment_article.py
beginners/newspaper/newspaper_project/: settings.py  urls.py
beginners/newspaper/pages/: tests.py
beginners/newspaper/templates/: home.html
beginners/newspaper/templates/registration/: login.html  password_change_done.html  password_reset_email.html  signup.html
beginners/newspaper/users/: admin.py  forms.py
beginners/newspaper/users/migrations/: 0001_initial.py
beginners/post app/: README.md
blog/: models.py  tests.py  urls.py  views.py
blog app/: db.sqlite3  pyproject.toml
blog app/blog/migrations/: 0001_initial.py
blog app/blog/templates/: base.html  post_delete.html  post_edit.html
blog/migrations/: 0001_initial.py
blog/templates/: base.html  home.html
blog_project/: settings.py  urls.py
django-training/: Makefile
django-training/test_project/: urls.py
pages/: tests.py  urls.py
pages/templates/: base.html  home.html
post app/posts/: models.py  tests.py  urls.py
posts/: urls.py
posts/migrations/: 0001_initial.py
posts/templates/: home.html
static/css/: base.css
templates/: base.html  home.html  post_delete.html  post_detail.html  post_edit.html  post_new.html
test_project/: settings.py  urls.py
(+2 files in other folders)
