[tool.poetry]
name = "start"
version = "0.1.0"
description = ""
authors = ["Luisdev <vnunes30@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-filter = "^23.5"
psycopg2 = "^2.9.9"
djangorestframework = "^3.14.0"
django = "^5.0.1"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
